Alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,7 @@ body {
 .title-color {
   color: #dc3545;
 }
+
+.m-bt-30px {
+  margin-bottom: 30px;
+}
